samples/troubleshooting/invalid/R4.dita
<?xml version="1.0" encoding="UTF-8"?>
<troubleshooting>
  <title>T</title>
  <shortdesc>SD</shortdesc>
  <troublebody>
    <troubleSolution>
      <cause><title>C</title><p>Cause desc</p></cause>
      <remedy><title>R</title><steps-informal><p>Do this.</p></steps-informal></remedy>
    </troubleSolution>
  </troublebody>
</troubleshooting>